# 2025s-rustling-MilkBlock

./: temp_21723_ThreadId1  temp_24456_ThreadId1  temp_45255_ThreadId1  temp_8556_ThreadId1  temp_88181_ThreadId1  temp_94332_ThreadId1  temp_95765_ThreadId1
exercises/: quiz2.rs  quiz3.rs
exercises/algorithm/: Cargo.toml  algorithm1.rs  algorithm10.rs  algorithm2.rs  algorithm3.rs  algorithm4.rs  algorithm5.rs  algorithm6.rs  algorithm7.rs  algorithm8.rs  algorithm9.rs
exercises/clippy/: clippy3.rs
exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
exercises/enums/: Cargo.toml  enums2.rs  enums3.rs
exercises/error_handling/: errors1.rs  errors2.rs  errors4.rs
exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
exercises/iterators/: iterators2.rs  iterators4.rs  iterators5.rs
exercises/modules/: modules2.rs  modules3.rs
exercises/options/: options1.rs  options2.rs
exercises/smart_pointers/: box1.rs  cow1.rs  rc1.rs
exercises/strings/: strings3.rs
exercises/structs/: structs1.rs  structs2.rs
exercises/tests/: build.rs  tests7.rs
exercises/threads/: threads2.rs
exercises/traits/: traits2.rs  traits5.rs
